# a-map-reduce-library

./: BUILDING.md  CMakeLists.txt  Dockerfile  NOTICE  README.md  _config.yml  build.sh  scaffold.yaml
examples/01_word_count/: CMakeLists.txt  README.md  sample.txt
examples/01_word_count/src/: main.c
examples/02_streaming_recommender/: CMakeLists.txt  README.md  build.sh
examples/02_streaming_recommender/src/: main.c
examples/03_pipeline_recommender/: CMakeLists.txt  README.md
examples/03_pipeline_recommender/src/: main.c  pipeline_amazon.c  pipeline_amazon.h  pipeline_amazon_sax.c  pipeline_co_freq.c  pipeline_co_freq.h  pipeline_enrich.c  pipeline_enrich.h
examples/04_inverted_recommender/: CMakeLists.txt  README.md  build.sh
examples/04_inverted_recommender/src/: main.c  pipeline_amazon.c  pipeline_inv_freq.c  pipeline_inv_freq.h
examples/05_complements_recommender/: CMakeLists.txt  README.md
examples/05_complements_recommender/src/: main.c  pipeline_amazon.h  pipeline_complements.c  pipeline_complements.h
examples/06_substitutes_recommender/: CMakeLists.txt  README.md
examples/06_substitutes_recommender/src/: main.c  pipeline_inv_freq.c
examples/07_buddies/: CMakeLists.txt  README.md
examples/07_buddies/src/: main.c  pipeline_inv_freq.h  pipeline_reciprocal_nearest_neighbors.c  pipeline_reciprocal_nearest_neighbors.h  pipeline_substitutes.c  pipeline_substitutes.h
examples/08_conditional_branching/: CMakeLists.txt  README.md
examples/08_conditional_branching/src/: main.c  main_pipeline.c
examples/09_chaining/: CMakeLists.txt  README.md  build.sh
examples/09_chaining/src/: main.c
examples/data/: .gitignore  README.md  download_data.sh
include/a-map-reduce-library/: amr.h  amr_common_datatypes.h  amr_core.h  amr_pipeline.h  amr_schedule.h  amr_task.h  amr_types.h  amr_worker.h
src/: ac_schedule.c  amr.c  amr_cli.c  amr_cli.h  amr_common_datatypes.c  amr_datatypes.c  amr_datatypes.h  amr_debug.c  amr_debug.h  amr_internal.h  amr_runner.c  amr_runner.h  amr_schedule.c  amr_task.c  amr_task.h  amr_worker.c  amr_worker.h
tests/: CMakeLists.txt
